--- a/conf/custom.ini
+++ b/conf/custom.ini
@@ -4,7 +4,7 @@
 http_port = 8080
 
 # The public facing domain name used to access grafana from a browser
-domain = <your details>
+# domain = <your details>
 
 # The full public facing url
-root_url = <your details>
+# root_url = <your details>
